--- a/content/WEB-INF/web.xml
+++ b/content/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	id="WebApp_ID"
 	version="3.1">
 	
-	<display-name>518woyaofa518</display-name>
+	<display-name>wwlh</display-name>
 
 	<filter>
 		<filter-name>nutz</filter-name>
